Fix Remaining scroll bar issues Task: Fix Remaining scroll bar issues (3631b4d0-58ba-11ea-91ee-31c2d4983666) * repositories component: removed unnecessary code, cleaned sass, fixed unmounted repos dialog * navigator/tree component: fixed scroll-bar height in all explorer trees * filter component: fixed height, removed extra scrollbar, implemented more robust action buttons

--- a/kohese-portal/client/src/components/filter/filter.component.scss
+++ b/kohese-portal/client/src/components/filter/filter.component.scss
@@ -1,1 +1,37 @@
 @import '../../app.component';
+
+:host {
+
+  .top-bar {
+    height: 7%;
+  }
+
+
+  .filter-dialog-container {
+    height: 100%;
+    width: 100%;
+
+    .dialog-title {
+      height: 7%;
+      width: 100%;
+    }
+
+    .filter-tree-container {
+      height: calc(93% - 40px);
+      width: 100%;
+
+      virtual-scroll {
+        height: 100%;
+      }
+    }
+
+    mat-dialog-actions {
+      display: flex;
+      flex-direction: row;
+      padding: 0px !important;
+    }
+  }
+
+
+
+}
